---------------------------------------------------------------------------------------------------
Version: 0.0.141
Date: 30/04/2020
  BugFixes:
    - Erya Loader 1 and Extrem can be blueprinted / copy-pasted
    - Erya Radar works now. Does a nearby scan every 2 seconds
---------------------------------------------------------------------------------------------------
Version: 0.0.140
Date: 30/04/2020
  BugFixes:
    - actually fix the invalid guielement error
---------------------------------------------------------------------------------------------------
Version: 0.0.139
Date: 29/04/2020
  Changes:
    - update graphics dependency
  BugFixes:
    - initialize cjTableSize (ghost construction table limit) for every *new* player
        if still error'ing (rare case) go to MF options ui, jets tab (should fix itself? set value to 1000)
---------------------------------------------------------------------------------------------------
Version: 0.0.138
Date: 29/04/2020
  BugFixes:
    - no error if GUI was never moved between save/load
    - missed default value _MFConstructionJetDefaultTableSize somehow
---------------------------------------------------------------------------------------------------
Version: 0.0.137
Date: 29/04/2020
  BugFixes:
    - Don't use an invalid GUI for a valid player
    - find_non_colliding_position error (spelling)
    - copy pasting multiple entities fix
---------------------------------------------------------------------------------------------------
Version: 0.0.136
Date: 29/04/2020
  Corrections:
    - version 0.0.135: PASTING settings defaults to (always is?) current player.
        Blueprinting store vague details but
            tries to match when the ghost is built, as best as it can.
  Changes:
    - Bilka added support in newgame+. Mobile Factory surface and Control Center aren't reset.
  BugFixes:
    - fix invalid player error on_research_finished (hopefully)
