@@ -4,6 +4,8 @@ Date: 30/04/2020
   BugFixes:
     - Erya Loader 1 and Extrem can be blueprinted / copy-pasted
     - Erya Radar works now. Does a nearby scan every 2 seconds
+    - set next_upgrade to nil for OreCleaner, Fluid Extractor and unset Erya structures
+    - trying to fix invalid player -> MainGUI error again
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.140
 Date: 30/04/2020
